# HR-Pulse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  extract_skills.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  lints.yml
app/: config.py  main.py
app/api/routers/: auth.py  jobs.py
app/authentication/: auth.py
app/db/: database.py
app/models/: job_model.py  user_model.py
app/schemas/: job_schema.py  user_schema.py
app/services/: service.py
ml/: eda.ipynb  extract_skills.py  extracted_skills_only.csv  top_50_skills_binary.csv
ml/models/: salary_prediction.py
ml/models/v1/: model_columns.pkl  salary_xgb_model.pkl
tests/: conftest.py  test_auth.py  test_jobs.py
